--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^20.8.4",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
